# DUPE-Desarrollos-Inmobiliarios

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_NOTES.md  Makefile  README.md  architecture.md  docker-compose.yml  git-push.sh  pyproject.toml  requirements.txt  test_api.sh
docs/: DUPE_Gap_Analysis_June2026.md  WALKTHROUGH_EJECUTIVO.md
docs/architecture/: DUPE_Agentic_Platform_L1_Architecture.md
docs/decisions/: 0001-engagement-classification.md
docs/rom/: DUPE_Agentic_Platform_ROM_Estimate.md
docs/rom/decks/: build-dupe-deck-es.js  build-dupe-deck-light.js  build-dupe-deck.js  package-lock.json  package.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  index.ts
frontend/src/components/: ExcelBulkImport.tsx
frontend/src/pages/: BudgetOverview.tsx  CalendarPage.tsx  CashFlowPage.tsx  CollectionsPortal.tsx  ComercialPage.tsx  ContabilidadPage.tsx  Dashboard.tsx  DataEntryPage.tsx  (+11 more)
inputs/: Cuestionario_Requerimientos_Cobros_DUPE REV.docx  Cuestionario_Requerimientos_DUPE REV.docx  MODELOS FINANCIEROS DUPE - PROYECTOS TURISTICOS Y DE INTERES SOCIAL.xlsx
tests/: conftest.py
tests/integration/: conftest.py  test_budget.py  test_cashflow.py  test_comercial.py  test_dashboard.py  test_gestion.py  test_notifications.py  test_payments.py  test_postventa.py
tests/unit/: test_budget_rules.py  test_cashflow_math.py  test_escalation_rules.py  test_payment_plan_math.py  test_state_machines.py
(+75 files in other folders)
