[project]
name = "dupe-platform"
version = "0.1.0"
description = "DUPE Agentic Business Platform — HCLTech AI Labs"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.17",

    # Data / config
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "python-dateutil==2.9.0",

    # Database
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",

    # Agents — let uv resolve compatible versions across the LangChain ecosystem
    "langgraph>=0.2",
    "langchain-openai>=0.2",

    # Financial calculations
    "numpy-financial==1.0.0",
    "numpy>=1.26",

    # Reports
    "reportlab==4.2.5",
    "openpyxl==3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dupe_platform"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
